VFS-9843 Fixed broken layout when clicking very fast (detected in tests)

--- a/src/app/styles/components/file-info-modal.scss
+++ b/src/app/styles/components/file-info-modal.scss
@@ -27,9 +27,7 @@
             display: initial;
           }
           .file-info-modal-footer {
-            height: 0;
-            padding-top: 0;
-            padding-bottom: 0;
+            display: none;
           }
         }
       }
